--- a/source/pages/base.pug
+++ b/source/pages/base.pug
@@ -1,10 +1,12 @@
 doctype html 
 html
    head
-      title Webpack app
+      block title
       
       meta(charset="utf-8") 
       meta(name="viewport", content="width=device-width, initial-scale=1")
    
    body
-      h1 test pug
+      nav.nav
+
+      block main
