--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,6 @@
    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid voluptatem fuga soluta earum, sint nobis minima consequatur! Maxime sapiente illum, animi ducimus, labore eos sit, dignissimos unde qui recusandae beatae.</p>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid voluptatem fuga soluta earum.</p>
 </body>
 </html>
